--- a/userside/view_menu.html
+++ b/userside/view_menu.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&family=Mulish:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="logo_store_name_container">
             <div class="logo_container"><img src="../images/tray 1.png" alt=""></div>
             <div class="store_name_container">
@@ -20,7 +20,7 @@
                 <p>Great coffee, food & relaxing spot.</p>
             </div>
         </div>
-        <a href="">
+        <a href="cart_page.html">
             <div style="margin-right: 8px;"><img src="../images/shopping_cart.png" alt=""></div>
             <p>My Cart</p>
         </a>
@@ -42,6 +42,71 @@
         <div class="store_details_btns_container">
             <button>Vegan</button>
             <button> Gullton Free</button>
+        </div>
+
+
+
+        <!-- ... MENU ITEMS ... -->
+        <div class="menu_cards_container">
+            <div class="menu_card">
+                <div class="image_container"><img src="../images/ben-kolde-FFqNATH27EM-unsplash 1.png" alt=""></div>
+                <div class="item_details">
+                    <h2 class="item_title">Toast and Coffee</h2>
+                    <p class="item_description">BreakFast is obviously the most important meal</p>
+                    <h2 class="item_price">7.5 <span>USD</span></h2>
+                    <div class="add_to_cart_btn_container">
+                        <button>
+                            <div style="margin-right: 8px;"><img src="../images/shopping_cart.png" alt=""></div>
+                            Add to cart
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="menu_card">
+                <div class="image_container"><img src="../images/ben-kolde-FFqNATH27EM-unsplash 1.png" alt=""></div>
+                <div class="item_details">
+                    <h2 class="item_title">Toast and Coffee</h2>
+                    <p class="item_description">BreakFast is obviously the most important meal</p>
+                    <h2 class="item_price">7.5 <span>USD</span></h2>
+                    <div class="add_to_cart_btn_container">
+                        <button>
+                            <div style="margin-right: 8px;"><img src="../images/shopping_cart.png" alt=""></div>
+                            Add to cart
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="menu_card">
+                <div class="image_container"><img src="../images/ben-kolde-FFqNATH27EM-unsplash 1.png" alt=""></div>
+                <div class="item_details">
+                    <h2 class="item_title">Toast and Coffee</h2>
+                    <p class="item_description">BreakFast is obviously the most important meal</p>
+                    <h2 class="item_price">7.5 <span>USD</span></h2>
+                    <div class="add_to_cart_btn_container">
+                        <button>
+                            <div style="margin-right: 8px;"><img src="../images/shopping_cart.png" alt=""></div>
+                            Add to cart
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="menu_card">
+                <div class="image_container"><img src="../images/ben-kolde-FFqNATH27EM-unsplash 1.png" alt=""></div>
+                <div class="item_details">
+                    <h2 class="item_title">Toast and Coffee</h2>
+                    <p class="item_description">BreakFast is obviously the most important meal</p>
+                    <h2 class="item_price">7.5 <span>USD</span></h2>
+                    <div class="add_to_cart_btn_container">
+                        <button>
+                            <div style="margin-right: 8px;"><img src="../images/shopping_cart.png" alt=""></div>
+                            Add to cart
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
 
        
@@ -70,5 +135,7 @@
             </div>
         </div>
     </main>
+
+    <script src="view_store.js"></script>
 </body>
 </html>
