--- a/userside/view_store.html
+++ b/userside/view_store.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&family=Mulish:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="logo_store_name_container">
             <div class="logo_container"><img src="../images/tray 1.png" alt=""></div>
             <div class="store_name_container">
@@ -20,7 +20,7 @@
                 <p>Great coffee, food & relaxing spot.</p>
             </div>
         </div>
-        <a href="">
+        <a href="cart_page.html">
             <div style="margin-right: 8px;"><img src="../images/shopping_cart.png" alt=""></div>
             <p>My Cart</p>
         </a>
@@ -106,11 +106,13 @@
 
         <div class="mode">
             <p class="copyright">© Cripsy 2022. All rights reserved</p>
-            <div>
+            <div class="mode_container">
                 <div><img style="margin-top: 4px;" src="../images/light_mode.png" alt=""></div>
                 <p>Light</p>
             </div>
         </div>
     </main>
+    
+    <script src="view_store.js"></script>
 </body>
 </html>
