Added Responsiveness to Userside

--- a/userside/view_menu.html
+++ b/userside/view_menu.html
@@ -129,7 +129,7 @@
 
         <div class="mode">
             <p class="copyright">© Cripsy 2022. All rights reserved</p>
-            <div>
+            <div class="mode_container">
                 <div><img style="margin-top: 4px;" src="../images/light_mode.png" alt=""></div>
                 <p>Light</p>
             </div>
