--- a/userside/cart_page.html
+++ b/userside/cart_page.html
@@ -33,7 +33,7 @@
 
         <div class="path">
             <p>Store</p>
-            <div><img style="margin-top: 5px; margin-right: 10px; margin-left: 10px;" src="../images/arrow_forward_ios.png" alt=""></div>
+            <div><img src="../images/arrow_forward_ios.png" alt=""></div>
             <p>Cart</p>
         </div>
 
@@ -64,7 +64,6 @@
                     <h2 class="item_price">7.5 <span>USD</span></h2>
                 </div>
             </div>
-
             
         </div>
 
@@ -107,7 +106,7 @@
             <div class="input">
                 <input type="text">
             </div>
-            <p style="margin-top: 6px; font-size: 16px;">Leave empty if you don't want to send any custom message.</p>
+            <p>Leave empty if you don't want to send any custom message.</p>
         </div>
 
         <div class="order_btn">
@@ -137,7 +136,7 @@
 
         <div class="mode">
             <p class="copyright">© Cripsy 2022. All rights reserved</p>
-            <div>
+            <div class="mode_container">
                 <div><img style="margin-top: 4px;" src="../images/light_mode.png" alt=""></div>
                 <p>Light</p>
             </div>
