--- a/adminSide/Edit_Store_BusinessDetails.html
+++ b/adminSide/Edit_Store_BusinessDetails.html
@@ -354,6 +354,11 @@
                 <a href="">Update</a>
             </div>
 
+            <div class="mode">
+                <div><img src="../images/light_mode.png" alt=""></div>
+                <p>Light</p>
+            </div>
+
         </section>
     </main>
 </body>
