--- a/adminSide/adminDashboard.html
+++ b/adminSide/adminDashboard.html
@@ -52,13 +52,13 @@
                     <p>Dashboard</p>
                 </a>
             </div>
-            <a href="" class="pwa">
+            <a href="PWA_configuration.html" class="pwa">
                 <div class="grid-img">
                     <img src="../images/web_asset.png" alt="">
                 </div>
                 <p>PWA</p>
             </a>
-            <a href="" class="lead-finder">
+            <a href="lead_finder.html" class="lead-finder">
                 <div class="grid-img">
                     <img src="../images/person_search.png" alt="">
                 </div>
@@ -141,7 +141,7 @@
             <div class="right-middle">
                 <h2>Store</h2>
                 <div class="line2"></div>
-                <a href="create_story.html">
+                <a href="create_store.html">
                     <div class="create-store-icon">
                         <img src="../images/add.png" alt="">
                     </div>
