--- a/adminSide/createCategory.html
+++ b/adminSide/createCategory.html
@@ -58,13 +58,13 @@
                     <p>Dashboard</p>
                 </a>
             </div>
-            <a href="" class="pwa">
+            <a href="PWA_configuration.html" class="pwa">
                 <div class="grid-img">
                     <img src="../images/web_asset.png" alt="">
                 </div>
                 <p>PWA</p>
             </a>
-            <a href="" class="lead-finder">
+            <a href="lead_finder.html" class="lead-finder">
                 <div class="grid-img">
                     <img src="../images/person_search.png" alt="">
                 </div>
