--- a/adminSide/createItemExtraSuccess.html
+++ b/adminSide/createItemExtraSuccess.html
@@ -56,13 +56,13 @@
                     <p>Dashboard</p>
                 </a>
             </div>
-            <a href="" class="pwa">
+            <a href="PWA_configuration.html" class="pwa">
                 <div class="grid-img">
                     <img src="../images/web_asset.png" alt="">
                 </div>
                 <p>PWA</p>
             </a>
-            <a href="" class="lead-finder">
+            <a href="lead_finder.html" class="lead-finder">
                 <div class="grid-img">
                     <img src="../images/person_search.png" alt="">
                 </div>
@@ -132,7 +132,7 @@
                 <div class="success-create-top">
                     <div class="img-icon"><img src="../images/query_stats (2).png" alt=""></div>
                     <p>
-                        <a href="" class="success-create-top-link">
+                        <a href="statistics.html" class="success-create-top-link">
                             Statistics
                         </a>
                     </p>
@@ -336,10 +336,10 @@
 
 
             <!-- Mode -->
-            <div class="mode">
+            <!-- <div class="mode">
                 <div><img src="../images/light_mode.png" alt=""></div>
                 <p>Light</p>
-            </div>
+            </div> -->
         </section>
     </main>
 </body>
