--- a/adminSide/createItemSuccess.html
+++ b/adminSide/createItemSuccess.html
@@ -57,13 +57,13 @@
                     <p>Dashboard</p>
                 </a>
             </div>
-            <a href="" class="pwa">
+            <a href="PWA_configuration.html" class="pwa">
                 <div class="grid-img">
                     <img src="../images/web_asset.png" alt="">
                 </div>
                 <p>PWA</p>
             </a>
-            <a href="" class="lead-finder">
+            <a href="lead_finder.html" class="lead-finder">
                 <div class="grid-img">
                     <img src="../images/person_search.png" alt="">
                 </div>
@@ -114,7 +114,7 @@
     
                     <div class="success-create-top">
                         <div class="img-icon"><img src="../images/store (2).png" alt=""></div>
-                        <p style="">
+                        <p>
                             <a href="" class="success-create-top-link" style="color: #8130F3;">
                                 Item
                             </a>
@@ -133,7 +133,7 @@
                 <div class="success-create-top">
                     <div class="img-icon"><img src="../images/query_stats (2).png" alt=""></div>
                     <p>
-                        <a href="" class="success-create-top-link">
+                        <a href="statistics.html" class="success-create-top-link">
                             Statistics
                         </a>
                     </p>
