--- a/adminSide/create_store.html
+++ b/adminSide/create_store.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Store</title>
-    <link rel="stylesheet" href="create_story.css">
+    <link rel="stylesheet" href="create_store.css">
     <link rel="stylesheet" href="adminDashboard.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,13 +56,13 @@
                     <p>Dashboard</p>
                 </a>
             </div>
-            <a href="" class="pwa">
+            <a href="PWA_configuration.html" class="pwa">
                 <div class="grid-img">
                     <img src="../images/web_asset.png" alt="">
                 </div>
                 <p>PWA</p>
             </a>
-            <a href="" class="lead-finder">
+            <a href="lead_finder.html" class="lead-finder">
                 <div class="grid-img">
                     <img src="../images/person_search.png" alt="">
                 </div>
@@ -109,24 +109,6 @@
         <!-- Right Section -->
         <section class="right">
 
-
-            <!-- Profile Details
-            <div class="profile-container">
-                <div class="welcome-msg">
-                    <p>Welcome back <span> Ododo!</span> You’ve successfully logged in.</p>
-                    <div><img src="../images/cancel.png" alt=""></div>
-                </div>
-
-                <div class="profile-details">
-                    <div class="profile-img-container">
-                        <img src="../images/Ododo Profile 1.png" alt="">
-                    </div>
-                    <p class="profile-details-p">Ododo Ginja</p>
-                    <div class="icon">
-                        <img src="../images/arrow_drop_down_circle.png" alt="">
-                    </div>
-                </div>
-            </div> -->
 
             <div class="dashboard-createStore">
                 <p>Dashboard</p>
@@ -246,6 +228,11 @@
             <div class="right-bottom">
                 <p> You can set up more details about the store after the creation.</p>
                 <a href="createStoreSuccessfully.html">Create Store</a>
+            </div>
+
+            <div class="mode">
+                <div><img src="../images/light_mode.png" alt=""></div>
+                <p>Light</p>
             </div>
 
         </section>
