--- a/adminSide/settings_api.html
+++ b/adminSide/settings_api.html
@@ -63,7 +63,7 @@
                 </div>
                 <p>PWA</p>
             </a>
-            <a href="" class="lead-finder">
+            <a href="lead_finder.html" class="lead-finder">
                 <div class="grid-img">
                     <img src="../images/person_search.png" alt="">
                 </div>
