--- a/adminSide/createCategorySuccess.html
+++ b/adminSide/createCategorySuccess.html
@@ -56,13 +56,13 @@
                     <p>Dashboard</p>
                 </a>
             </div>
-            <a href="" class="pwa">
+            <a href="PWA_configuration.html" class="pwa">
                 <div class="grid-img">
                     <img src="../images/web_asset.png" alt="">
                 </div>
                 <p>PWA</p>
             </a>
-            <a href="" class="lead-finder">
+            <a href="lead_finder.html" class="lead-finder">
                 <div class="grid-img">
                     <img src="../images/person_search.png" alt="">
                 </div>
@@ -132,7 +132,7 @@
                 <div class="success-create-top">
                     <div class="img-icon"><img src="../images/query_stats (2).png" alt=""></div>
                     <p>
-                        <a href="" class="success-create-top-link">
+                        <a href="statistics.html" class="success-create-top-link">
                             Statistics
                         </a>
                     </p>
@@ -141,19 +141,17 @@
                 <div class="success-create-top">
                     <div class="img-icon"><img src="../images/database.png" alt=""></div>
                     <p>
-                            <a href="" class="success-create-top-link">
-                                Order Statistics
-                            </a>
-                        </p>
+                        <a href="order_statistics.html" class="success-create-top-link">
+                            Order Statistics
+                        </a>
+                    </p>
                 </div>
 
                 <div class="success-create-top">
                     <div class="img-icon"><img src="../images/drive_file_rename_outline (1).png" alt=""></div>
                     <p>
-                            <a href="edit-store.html" class="success-create-top-link">
-                                Edit
-                            </a>
-                        </p>
+                        <a href="edit-store.html" class="success-create-top-link"> Edit </a>
+                    </p>
                 </div>
 
                 <div class="success-create-top">
