--- a/adminSide/createStoreSuccessfully.html
+++ b/adminSide/createStoreSuccessfully.html
@@ -58,13 +58,13 @@
                     <p>Dashboard</p>
                 </a>
             </div>
-            <a href="" class="pwa">
+            <a href="PWA_configuration.html" class="pwa">
                 <div class="grid-img">
                     <img src="../images/web_asset.png" alt="">
                 </div>
                 <p>PWA</p>
             </a>
-            <a href="" class="lead-finder">
+            <a href="lead_finder.html" class="lead-finder">
                 <div class="grid-img">
                     <img src="../images/person_search.png" alt="">
                 </div>
@@ -125,7 +125,7 @@
                 <div class="success-create-top">
                     <div class="img-icon"><img src="../images/qr_code.png" alt=""></div>
                     <p>
-                        <a href="" class="success-create-top-link">
+                        <a href="qr_code.html" class="success-create-top-link">
                             QR Code
                         </a>
                     </p>
@@ -143,7 +143,7 @@
                 <div class="success-create-top">
                     <div class="img-icon"><img src="../images/query_stats (2).png" alt=""></div>
                     <p>
-                        <a href="" class="success-create-top-link">
+                        <a href="statistics.html" class="success-create-top-link">
                             Statistics
                         </a>
                     </p>
@@ -152,7 +152,7 @@
                 <div class="success-create-top">
                     <div class="img-icon"><img src="../images/database.png" alt=""></div>
                     <p>
-                            <a href="" class="success-create-top-link">
+                            <a href="order_statistics.html" class="success-create-top-link">
                                 Order Statistics
                             </a>
                         </p>
