--- a/adminSide/statistics_graphs.html
+++ b/adminSide/statistics_graphs.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Menu Success</title>
+    <title>Statistics Graphs</title>
     <link rel="stylesheet" href="adminDashboard.css">
-    <link rel="stylesheet" href="createMenuSuccess.css">
+    <link rel="stylesheet" href="statristics_graphs.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&family=Mulish:wght@300;400;600;700;800&display=swap" rel="stylesheet">
@@ -50,20 +50,20 @@
         <!-- Side Menu Section -->
         <section class="sideMenu">
             <div class="dashboard">
-                <a href="">
+                <a href="adminDashboard.html">
                     <div class="grid-img">
                         <img src="../images/grid_view.png" alt="">
                     </div>
                     <p>Dashboard</p>
                 </a>
             </div>
-            <a href="PWA_configuration.html" class="pwa">
+            <a href="" class="pwa">
                 <div class="grid-img">
                     <img src="../images/web_asset.png" alt="">
                 </div>
                 <p>PWA</p>
             </a>
-            <a href="lead_finder.html" class="lead-finder">
+            <a href="" class="lead-finder">
                 <div class="grid-img">
                     <img src="../images/person_search.png" alt="">
                 </div>
@@ -112,14 +112,14 @@
         <section class="right">
             <div class="success-create-top-container">
     
-                    <div class="success-create-top">
-                        <div class="img-icon"><img src="../images/store (1).png" alt=""></div>
-                        <p>
-                            <a href="" class="success-create-top-link">
-                                Store
-                            </a>
-                        </p>
-                    </div>
+                <div class="success-create-top">
+                    <div class="img-icon"><img src="../images/store (1).png" alt=""></div>
+                    <p>
+                        <a href="" class="success-create-top-link">
+                            Store
+                        </a>
+                    </p>
+                </div>
 
                 <div class="success-create-top">
                     <div class="img-icon"><img src="../images/qr_code.png" alt=""></div>
@@ -140,7 +140,7 @@
                 </div>
 
                 <div class="success-create-top">
-                    <div class="img-icon"><img src="../images/query_stats (2).png" alt=""></div>
+                    <div class="img-icon"><img src="../images/query_stats (3).png" alt=""></div>
                     <p>
                         <a href="statistics.html" class="success-create-top-link">
                             Statistics
@@ -169,44 +169,66 @@
                 <div class="success-create-top">
                     <div class="img-icon"><img src="../images/delete.png" alt=""></div>
                     <p>
-                        <a href="" class="success-create-top-link">Delete</a>
-                    </p>
+                            <a href="" class="success-create-top-link">
+                                Delete
+                            </a>
+                        </p>
                 </div>
             </div>
+
 
             <div class="dashboard-Store">
                 <p>Dashboard</p>
                 <div><img style="margin-top: 5px; margin-right: 10px;" src="../images/arrow_forward_ios.png" alt=""></div>
                 <p>Store</p>
                 <div><img style="margin-top: 5px; margin-right: 10px;" src="../images/arrow_forward_ios.png" alt=""></div>
-                <p>Menu</p>
+                <p> Statistics</p>
             </div>
 
-            <div class="store-created-title">
-                <p class="store-title">Flower’s Kitchen</p>
-                <div class="store-link">
-                    <p>https://additional.66qrmenu.com/ginja-chow/</p>
-                    <div><img src="../images/file_copy.png" alt=""></div>
+
+            <div class="store_title_and_carlender">
+                <div class="store-created-title">
+                    <p class="store-title">Flower’s Kitchen</p>
+                    <div class="store-link">
+                        <p>https://additional.66qrmenu.com/ginja-chow/</p>
+                        <div><img src="../images/file_copy.png" alt=""></div>
+                    </div>
+                </div>
+
+                <div class="carlender">
+                    <div><img src="../images/date_range.png" alt=""></div>
+                    <p>22 August ,2022 -  20 August, 2022</p>
                 </div>
             </div>
 
-            <!-- Right Middle -->
-            <div class="right-middle">
-                <h2>CATEGORIES</h2>
-                <div class="line2"></div>
-                <a href="createCategory.html">
-                    <div class="create-store-icon">
-                        <img src="../images/add.png" alt="">
-                    </div>
-                    <h2>Create Category</h2>
-                </a>
+    
+            <div class="graph_container">
+                <div class="graph"></div>
             </div>
 
-            <div class="person-sitting-container">
-                <div><img src="../images/Capture (2).PNG" alt=""></div>
-                <p class="para1">There are no catergories for this menu</p>
-                <p class="para2">Start by creating your category.</p>
+            <div class="progress_bar_card_container">
+                <div class="progress_bar_card">
+                    <h2 class="card_title">Countries</h2>
+                </div>
+                <div class="progress_bar_card">
+                    <h2 class="card_title">Referrers</h2>
+                </div>
+                <div class="progress_bar_card">
+                    <h2 class="card_title">Devices</h2>
+                </div>
+                <div class="progress_bar_card">
+                    <h2 class="card_title">Operating Systems</h2>
+                </div>
+                <div class="progress_bar_card">
+                    <h2 class="card_title">Browsers</h2>
+                </div>
+                <div class="progress_bar_card">
+                    <h2 class="card_title">Languages</h2>
+                </div>
             </div>
+
+
+
 
             <div class="mode">
                 <div><img src="../images/light_mode.png" alt=""></div>
