--- a/adminSide/statistics.html
+++ b/adminSide/statistics.html
@@ -151,7 +151,7 @@
                 <div class="success-create-top">
                     <div class="img-icon"><img src="../images/database.png" alt=""></div>
                     <p>
-                            <a href="" class="success-create-top-link">
+                            <a href="order_statistics.html" class="success-create-top-link">
                                 Order Statistics
                             </a>
                         </p>
